<resources>
    <string name="app_name">MovieAppTinkoff</string>
    <string name="title">Изгой-один: Звёздные войны</string>
    <string name="description">Сопротивление собирает отряд для выполнения особой миссии - надо выкрасть чертежи самого совершенного и мертоносного оружия Империи. Не всем суждено вернуться домой, но герои готовы к этому, ведь на кону судьба Галактики</string>
    <string name="genres">Жанры: фантастика, приключения</string>
    <string name="countries">Страны: США</string>
    <string name="year">2022</string>
    <string name="top_title">Популярные</string>
    <string name="favorite_title">Избранное</string>
    <string name="name">Изгой-один: Звёздные...</string>
    <string name="type">Фантастика (2016)</string>
    <string name="textLostConnection">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>